# TimeMenagementDemon

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
include/: DateTime.h  Event.h  EventManager.h  Event_meeting.h  Event_task.h
src/: DateTime.cpp  Event.cpp  EventManager.cpp  Event_meeting.cpp  Event_task.cpp  app.cpp
test/: testDateTimeAuto.cpp  testDateTimeManual.cpp  testEventAuto.cpp  testEventManager.cpp  testMeeting.cpp  testTask.cpp
